# blake3.rust

./: .gitignore  Cargo.toml  README.md  android.sh  build.sh  dev.sh  exe.sh  pubspec.yaml  readme.make.md  so.xsh  test.dart  test.sh
h/: blake3.h
lib/: Ffi.dart  So.dart  blake3.dart  rmw.dart
src/: blake.rs  lib.rs
